test/expected/explain_rrr-1.out
explain int&& &r
           ^
12: error: reference is not supported in C
